syntax = "proto3";

package productDiscount;

service ProductDiscount {
  rpc getProductDiscount (ProductDiscountRequest) returns (ProductDiscountResponse) {}
}

message ProductDiscountRequest {
  int32 productPriceInCents = 1;
  int32 userId = 2;
}

message ProductDiscountResponse {
  string message = 1;
}